--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Shared/_Layout.cshtml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("League of TamagotchiModel's", "Index", "TamagotchiModel", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("League of Tamagotchi's", "Index", "Tamagotchis", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Tamagotchi Overview", "Index", "Tamagotchis")</li>
+                    <li>@Html.ActionLink("Create a Tamagotchi", "BulkCreation", "Tamagotchis")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Maarten Jacobs & Ben Schoenmakers</p>
         </footer>
     </div>
 
