--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Shared/_Layout.cshtml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Tamagotchi Overview", "Index", "Tamagotchis")</li>
                     <li>@Html.ActionLink("Create a Tamagotchi", "BulkCreation", "Tamagotchis")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Reset your Tamagotchi's", "Reset", "Tamagotchis")</li>
                 </ul>
             </div>
         </div>
