Added full functionality to dynamically change values Added Settings class and implemeted WPF project. TODO: Add View buttons and support for Settings, testing and WPF testing

--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Shared/_Layout.cshtml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Tamagotchi Overview", "Index", "Tamagotchis")</li>
                     <li>@Html.ActionLink("Create a Tamagotchi", "BulkCreation", "Tamagotchis")</li>
                     <li>@Html.ActionLink("Reset your Tamagotchi's", "Reset", "Tamagotchis")</li>
+                    <li>@Html.ActionLink("Settings", "Settings", "Tamagotchis")</li>
                 </ul>
             </div>
         </div>
