--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.WPF1/MainWindow.xaml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.WPF1/MainWindow.xaml
@@ -7,13 +7,13 @@
         Title="MainWindow" Height="400" Width="500">
 
     <Grid>
-        <DataGrid AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="349" Width="472" SelectionMode="Single" SelectedValue="{Binding TGList}" >
+        <DataGrid AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="349" Width="472" SelectionMode="Single" SelectedValue="{Binding CustomTGList}" >
 
 
             <DataGrid.Columns>
 
                 <DataGridTextColumn Header="Naam" 
-                        Binding="{Binding name}" Width="*"/>
+                        Binding="{Binding Name}" Width="*"/>
 
                 <DataGridTemplateColumn Header="Status" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
