--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Tamagotchis/Reset.cshtml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Tamagotchis/Reset.cshtml
@@ -8,8 +8,6 @@
 
 <h2>Do you wish to reset your Tamagotchi's?</h2>
 <p>
-    @Html.ActionLink("Reset my Tamagotchi's!", "ResetTamagotchis")
+   @Html.ActionLink("Reset Tamagotchi's", "ResetTamagotchis", "Tamagotchis", null, new { @class = "btn btn-default" })
 </p>
 @Html.ActionLink("Back to Tamagotchi Overview", "Index")
-
-
