--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.WPF1/MainWindow.xaml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.WPF1/MainWindow.xaml
@@ -7,7 +7,7 @@
         Title="MainWindow" Height="400" Width="500">
 
     <Grid>
-        <DataGrid AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="349" Width="472" SelectionMode="Single" SelectedValue="{Binding CustomTGList}" >
+        <DataGrid AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="349" Width="472" SelectionMode="Single" ItemsSource="{Binding CustomTGList}" >
 
 
             <DataGrid.Columns>
