Finished, except TestProject extras: ASPvalidation

--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Tamagotchis/Details.cshtml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Tamagotchis/Details.cshtml
@@ -93,7 +93,7 @@
     </table>
 </div>
 <div class ="col-md-10">
-    <img src="@Url.Content("~/Content/images/" + @ViewBag.Status + ".gif")" alt="Status of Tamagotchi" />
+    <img src="@Url.Content("~/Content/images/" + Model.Status + ".gif")" alt="Status of Tamagotchi" />
 </div>
 <p class="col-md-10">
     @Html.ActionLink("Back to Tamagotchi Overview", "Index")
