--- a/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Tamagotchis/ActionFailed.cshtml
+++ b/Prog6_EindOpdracht/Prog6_Eindopdracht.ASP/Views/Tamagotchis/ActionFailed.cshtml
@@ -1,3 +1,3 @@
 ﻿<h2>Your Tamagotchi is still busy with his last activity</h2>
-<p>@ViewBag.RemainingCountdown seconds until your Tamagotchi is finished with @ViewBag.ActionPerformed ing </p>
+<p>@ViewBag.RemainingCountdown seconds until your Tamagotchi is finished with action: @ViewBag.ActionPerformed </p>
 <p>@Html.ActionLink("Return to the Tamagotchi overview!", "Index")</p>
